--- a/games/catcher.html
+++ b/games/catcher.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/customize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/commonMenuAnimations.css">
+    <link rel="stylesheet" href="styles/gameArea600.css">
     <link rel="shortcut icon" type="image/svg" href="assets/flower.svg">
     <title>Chichesky - Games</title>
   </head>
@@ -54,11 +55,11 @@
     <main>
       <center>
         <content>
-          <h1>... GAME PAGE ...</h1>
+          <h1>... Catcher ...</h1>
           <p>This is not completed. I'm working on it.</p>
-          <ul>
-            <li><a href="games/catcher.html">Catcher</a><li>
-          </ul>
+          <p><a href="../about" target="gameArea600">catcher v0.1</a>, just basic mechanics.</p>
+
+          <iframe name="gameArea600"></iframe>
         </content>
       </center>
     </main>
