--- a/games/catcher.html
+++ b/games/catcher.html
@@ -7,10 +7,10 @@
     <meta name="author" content="Chichesky| Göktuğ Çiçek">
     <meta name="copyright" content="S&M Universe">
 
-    <link rel="stylesheet" href="styles/customize.css">
-    <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/commonMenuAnimations.css">
-    <link rel="stylesheet" href="styles/gameArea600.css">
+    <link rel="stylesheet" href="../styles/customize.css">
+    <link rel="stylesheet" href="../styles/common.css">
+    <link rel="stylesheet" href="../styles/commonMenuAnimations.css">
+    <link rel="stylesheet" href="../styles/gameArea600.css">
     <link rel="shortcut icon" type="image/svg" href="assets/flower.svg">
     <title>Chichesky - Games</title>
   </head>
@@ -65,5 +65,5 @@
     </main>
   </body>
 
-  <script src="scripts/menu.js" type="text/javascript"></script>
+  <script src="../scripts/menu.js" type="text/javascript"></script>
 </html>
