--- a/games/catcher.html
+++ b/games/catcher.html
@@ -57,8 +57,11 @@
         <content>
           <h1>... Catcher ...</h1>
           <p>This is not completed. I'm working on it.</p>
-          <p><a href="../about" target="gameArea600">catcher v0.1</a>, just basic mechanics.</p>
+          <p>
+            <a href="https://chichesky.github.io/catcher/catcher01/catcher01.html" target="gameArea600">
+            catcher v0.1</a>, just basic mechanics.
 
+          </p>
           <iframe name="gameArea600"></iframe>
         </content>
       </center>
