--- a/games/catcher.html
+++ b/games/catcher.html
@@ -28,9 +28,9 @@
         </div>
         <div class="smallMenuList">
           <ul>
-            <a href="index.html"><li>Homepage</li></a>
-            <a href="games.html"><li>Games</li></a>
-            <a href="about.html"><li>About</li></a>
+            <a href="../index.html"><li>Homepage</li></a>
+            <a href="../games.html"><li>Games</li></a>
+            <a href="../about.html"><li>About</li></a>
           </ul>
         </div>
         <div class="smallMenuFooter"></div>
