--- a/games/catcher.html
+++ b/games/catcher.html
@@ -42,9 +42,9 @@
         </div>
           <div class="menuList">
             <ul>
-              <a href="index.html"><li>Homepage</li></a>
-              <a href="games.html"><li>Games</li></a>
-              <a href="about.html"><li>About</li></a>
+              <a href="../index.html"><li>Homepage</li></a>
+              <a href="../games.html"><li>Games</li></a>
+              <a href="../about.html"><li>About</li></a>
             </ul>
           </div>
           <div class="menuFooter"></div>
