--- a/games/catcher.html
+++ b/games/catcher.html
@@ -59,10 +59,11 @@
           <p>This is not completed. I'm working on it.</p>
           <p>
             <a href="https://chichesky.github.io/catcher/catcher01/catcher01.html" target="gameArea600">
-            catcher v0.1</a>, just basic mechanics.
-
+            Catcher v0.1:</a>, just basic mechanics.
+            <a href="https://chichesky.github.io/catcher/catcher02/catcher02.html" target="gameArea600">
+            Catcher v0.2: AdilSoft Edition:</a> basic buy and sell mechanics.
           </p>
-          <iframe name="gameArea600"></iframe>
+          <iframe name="gameArea600" href="https://chichesky.github.io/catcher/catcher02/catcher02.html"></iframe>
         </content>
       </center>
     </main>
