--- a/games/catcher.html
+++ b/games/catcher.html
@@ -63,7 +63,7 @@
             <a href="https://chichesky.github.io/catcher/catcher02/catcher02.html" target="gameArea600">
             Catcher v0.2: AdilSoft Edition:</a> basic buy and sell mechanics.
           </p>
-          <iframe name="gameArea600" href="https://chichesky.github.io/catcher/catcher02/catcher02.html"></iframe>
+          <iframe name="gameArea600" src="https://chichesky.github.io/catcher/catcher02/catcher02.html"></iframe>
         </content>
       </center>
     </main>
