--- a/games.html
+++ b/games.html
@@ -57,7 +57,7 @@
           <h1>... GAME PAGE ...</h1>
           <p>This is not completed. I'm working on it.</p>
           <ul>
-            <li><a href="games/catcher.html">Catcher</a></li>
+            <li><a href="/catcher">Catcher</a></li>
           </ul>
         </content>
       </center>
